Cambio en el manejo de empresas, se maneja el nombre de la empresa desde una tabla externa para evitar duplicados y sólo se aceptan cambios en la dependencia y número de la oficina. Así mismo, se quito el parámetro auto que estaba como extra en las respuestas donde existiera relación con el cliente